force-app/main/default/objects/Response__c/Response__c.object-meta.xml
<CustomObject>
    <label>Response</label>
    <nameField>
        <label>Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>