force-app/main/default/objects/Response__c/fields/AccountAssessmentRelation__c.field-meta.xml
<CustomField>
    <fullName>AccountAssessmentRelation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountAssessmentRelation</label>
    <referenceTo>AccountAssessmentRelation__c</referenceTo>
    <relationshipLabel>Supplier Response</relationshipLabel>
    <relationshipName>Supplier_Response</relationshipName>
    <type>Lookup</type>
</CustomField>