force-app/main/default/objects/Response__c/fields/Conversation_History__c.field-meta.xml
<CustomField>
    <fullName>Conversation_History__c</fullName>
    <label>Conversation History</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>