force-app/main/default/objects/Response__c/fields/Files__c.field-meta.xml
<CustomField>
    <fullName>Files__c</fullName>
    <label>Files</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>