force-app/main/default/objects/Response__c/fields/Is_Latest_Response__c.field-meta.xml
<CustomField>
    <fullName>Is_Latest_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Latest Response</label>
    <type>Checkbox</type>
</CustomField>