force-app/main/default/objects/Response__c/fields/Reject__c.field-meta.xml
<CustomField>
    <fullName>Reject__c</fullName>
    <label>Reject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>WithHold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>