force-app/main/default/objects/Response__c/fields/Response_Version__c.field-meta.xml
<CustomField>
    <fullName>Response_Version__c</fullName>
    <label>Response Version</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>