force-app/main/default/objects/Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Response__c</columns>
    <columns>Question__c</columns>
    <columns>Is_Latest_Response__c</columns>
    <columns>Flag__c</columns>
    <columns>Files__c</columns>
    <columns>Assessment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>